# Analyse-attrition-rh

./: .gitignore  Classifiez automatiquement des informations-P4.ipynb  pyproject.toml
