[project]
name = "technova-analytics"
version = "0.1.0"
description = "Analyse des causes d'attrition chez technova partners"
authors = [
    {name = "Fatih"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
